# Proyectos_Optica

./: README.md  main.py  pyproject.toml
Gnuplot/: ondas
P1/: main.py  reflexion-total-interna.csv  reflexion.csv  refraccionA.csv  refraccionB.csv  refraccionC.csv
P2/: datos.txt  espejoconcavo.csv  espejoconvexo.csv  main.py  minimosCuadrados.py
P3/: lenteconvergente.csv  lenteconvergente2.csv  lentedivergente.csv  main.py
P3/datos/: convergente.csv  divergente1.csv  divergente2.csv  geometriaLente.csv  imagenesConvergente.csv  imagenesDivergenteConvergente.csv
P4/: datos.csv
P5/: Datos Lab 5.xlsx
P6/: .~lock.Datos Lab6.xlsx#  Datos Lab6.xlsx
