[tool.poetry]
name = "repl_nix_ProyectosOptica"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
